# arach-no-bot-rs

./: .gitignore  Cargo.toml  Dockerfile-armv7-unknown-linux-musleabihf  Dockerfile-x86_64-unknown-linux-musl  LICENSE  Makefile.toml  README.md  bacon.toml  deny.toml  licenses.txt
.cargo/: config.toml
.github/workflows/: build.yml  check.yml  docker.yml  hash.yml  issue.yml  publish.yml
src/: commands.rs  constants.rs  database.rs  framework.rs  handlers.rs  main.rs  staging.rs  types.rs
src/commands/: age.rs  hahas.rs  with_staging.rs
src/constants/: channels.rs
src/database/: workaround.rs
src/handlers/: message.rs  reaction.rs
