[package]
name = "arachnobot"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = false

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
poise = "0.5.5"
regex = "1.9.1"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
mockall = "0.11.4"
