[package]
name = "arachnobot"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
staging = []

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
poise = "0.5.5"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.102"
firebase-rs = "2.0.8"
reqwest = { version = "0.11.18", features = ["json"] }
async-trait = "0.1.71"

[dev-dependencies]
mockall = "0.11.4"
