[package]
name = "arachnobot"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
staging = []

[dependencies]
poise = "0.5.6"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.107"
firebase-rs = "2.0.8"
reqwest = { version = "0.11.21", features = ["json"] }
async-trait = "0.1.73"
dotenvy = "0.15.7"
test-case = "3.2.1"
tracing = "0.1.37"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std"] }
tracing-appender = "0.2.2"

[dev-dependencies]
mockall = "0.11.4"
